changes with educational purposes

--- a/solution.css
+++ b/solution.css
@@ -47,9 +47,17 @@ h2 {
 #contact {
     float: right;
     /* Positioned to the right */
-    width: 30%;
+    width: 20%;
     /* Taking 30% width of the container */
     margin-right: 20px;
+    padding: 10px;
+    background-color: red;
+}
+
+.inner {
+
+    background-color: green;
+
 }
 
 #contact address p {
